--- a/config.toml
+++ b/config.toml
@@ -112,7 +112,7 @@ timeout = 60000
 
   # Custom copyright - optional
   copyright = "Copyright © 2021 - BeaconstreetUSA.com · All rights reserved"
-  favicon = "/icons8-favorite-16.png"
+  #favicon = "/icons8-favorite-16.png"
 
   # Color for the intro details and social links block, not applicable for dark mode
   # Supported values: Any color from TailwindCSS default colors
